<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/entry_card_background"
    android:elevation="5dp"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/entryItemLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/entry_card_foreground"
        >

        <RelativeLayout
            android:id="@+id/entryMoodLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:clickable="false"
            >

            <ImageView
                android:id="@+id/entry_mood"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_mood_normal"
                android:layout_marginLeft="10dp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/entryDetailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/entryMoodLayout"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="5dp"
            android:clickable="false"
            >

            <TextView
                android:id="@+id/mood_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moodText"
                android:textSize="20dp"
                android:textColor="@color/green"
                />

            <TextView
                android:id="@+id/entryList_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newEntryTitle"
                android:layout_marginEnd="90dp"
                android:textSize="12dp"
                android:layout_below="@id/mood_text"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dateCardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/date_card_background"
            android:clickable="false"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthDate"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/dayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dayDate"
                    android:textSize="25dp"
                    android:layout_below="@id/monthDate"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/timeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeDate"
                    android:textSize="12dp"
                    android:layout_below="@id/dayDate"
                    android:textColor="@color/white"
                    />


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>

